--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="songs_list">Songs: \n%s</string>
 
     <string name="no_found_text">No Albums Found</string>
+    <string name="search_field_hint">Enter album\'s name</string>
 </resources>
