--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="price">Price: %.2f%s</string>
     <string name="songs_list">Songs: \n%s</string>
 
-    <string name="no_found_text">No Albums Found</string>
+    <string name="empty_list_text">No Albums Found</string>
+    <string name="error_message">An error occurred\nPlease try again!</string>
     <string name="search_field_hint">Enter album\'s name</string>
 </resources>
